[package]
name = "controlled_chaos"
description = "Controlled chaos CI/CD (ccci)"
version = "0.1.0"
authors = ["Bee <bellis8099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.13.17" }
anyhow = { version = "1.0.38" }
