[package]
name = "cchaos"
description = "Controlled chaos CI/CD (ccci)"
version = "0.1.0"
authors = ["Bee <bellis8099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
languages = { path = "./src/languages" }
git2 = { version = "^0.13.17" }
gpgme = { version = "^0.9.2" }
anyhow = { version = "^1.0.38" }
