[package]
name = "languages"
version = "0.1.0"
authors = ["Bee <pizzaman8099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.38" }
git2 = { version = "0.13.17" }
json = { version = "0.12.4" }
regex = { version = "1.4.3" }

[lib]
name = "languages"
path = "languages.rs"
